[gd_scene load_steps=2 format=3 uid="uid://cd8jyx4av2iek"]

[ext_resource type="Script" uid="uid://bj62tddux6dg3" path="res://ui/ui.gd" id="1_nb4k0"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nb4k0")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_bottom = 23.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="DropSizeHeader" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Drop Size"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="DropSizeSlider" type="HSlider" parent="PanelContainer/MarginContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
value = 80.0
rounded = true

[node name="DropSizeLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "20"

[node name="DropWetnessHeader" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Drop Wetness"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="DropWetnessSlider" type="HSlider" parent="PanelContainer/MarginContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
value = 35.0

[node name="DropWetnessLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="PigmentDropSizeHeader" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Pigment Drop Size"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="PigmentDropSizeSlider" type="HSlider" parent="PanelContainer/MarginContainer/GridContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
value = 20.0
rounded = true

[node name="PigmentDropSizeLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "20"

[node name="PigmentDropWetnessHeader" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Pigment Wetness"

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="PigmentDropWetnessSlider" type="HSlider" parent="PanelContainer/MarginContainer/GridContainer/HBoxContainer5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
value = 80.0

[node name="PigmentDropWetnessLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2

[node name="DryRateHeader" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Dry Rate"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="DryRateSlider" type="HSlider" parent="PanelContainer/MarginContainer/GridContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
max_value = 50.0
step = 0.5
value = 5.0

[node name="DryRateLabel" type="Label" parent="PanelContainer/MarginContainer/GridContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
